--- a/csf/tasks/main.yml
+++ b/csf/tasks/main.yml
@@ -1,16 +1,22 @@
 ---
    # Ensure that we have perl dependency
-   - apt: name=libwww-perl state=present
+ - name: install perl dependency
+   apt: 
+      name=libwww-perl
+      state=present
    
 
    # Run the csf test script with perl
-   - name: Run the csf test script
-     action: command perl /etc/csf/csftest.pl >> testResult.txt
+ - name: Run the csf test script
+   action:
+      command perl /etc/csf/csftest.pl >> testResult.txt
 
    # test output of csf test script for missing modules. Output.
-   - name: Output missing csf modules
-     action: command echo 'missing module(s)! Search for FATAL in testResult.txt.'
-     only_if: command grep -e "*FATAL*" testResult.txt
+ - name: Output missing csf modules
+   action: 
+      command echo 'missing module(s)! Search for FATAL in testResult.txt.'
+   only_if:
+      command grep -e "*FATAL*" testResult.txt
 
    # Modify csf.conf according to the standards in our 'Palaso Servers' google doc
    - replace dest=/etc/csf/csf.conf regexp='TESTING = "1"*$' replace='TESTING = "0"'
@@ -24,13 +30,16 @@
    - replace dest=/etc/csf/csf.conf regexp='LF_SSH_EMAIL_ALERT = "1"' replace='LF_SSF_EMAIL_ALERT = "0"'
 
    # Modify csf.allow to allow some common outbound IP addresses
-   - name: Append some commonly used IP addresses to csf.allow
-     action: command echo -e "82.94.216.250 # cbl.abuseat.org for mail blocking\n193.62.202.28 # Manually allowed - Wed Feb  8 18:48:43 2012\ntcp|out|d=80|d=66.135.58.0/24 # # Akismet antispam - Thu Feb  9 15:06:40 2012\ntcp|out|d=80|d=72.233.56.0/24 # # wordpress.org - Thu Feb  9 15:08:09 2012\ntcp|out|d=80|d=75.126.16.218 # # subdomain.uservoice.com Mar 13 2012\n85.13.195.235 # # configserver.com firewall update - Mon Feb 13 07:46:26 2012\n# 61.7.176.228 # csf SSH installation/upgrade IP address - Mon Feb 13 07:46:36 2012\ntcp|out|d=80|d=184.95.147.111 # # orlando server palaso\ntcp|out|d=80|d=174.36.207.186 # # geolite.maxmind.com 1\ntcp|out|d=80|d=50.97.220.226  # # geolite.maxmind.com 2\ntcp|out|d=80|d=75.101.167.237 # # ESV Bible audio widget" >> /etc/csf/csf.allow
+ - name: Append some commonly used IP addresses to csf.allow
+   action:
+      command echo -e "82.94.216.250 # cbl.abuseat.org for mail blocking\n193.62.202.28 # Manually allowed - Wed Feb  8 18:48:43 2012\ntcp|out|d=80|d=66.135.58.0/24 # # Akismet antispam - Thu Feb  9 15:06:40 2012\ntcp|out|d=80|d=72.233.56.0/24 # # wordpress.org - Thu Feb  9 15:08:09 2012\ntcp|out|d=80|d=75.126.16.218 # # subdomain.uservoice.com Mar 13 2012\n85.13.195.235 # # configserver.com firewall update - Mon Feb 13 07:46:26 2012\n# 61.7.176.228 # csf SSH installation/upgrade IP address - Mon Feb 13 07:46:36 2012\ntcp|out|d=80|d=184.95.147.111 # # orlando server palaso\ntcp|out|d=80|d=174.36.207.186 # # geolite.maxmind.com 1\ntcp|out|d=80|d=50.97.220.226  # # geolite.maxmind.com 2\ntcp|out|d=80|d=75.101.167.237 # # ESV Bible audio widget" >> /etc/csf/csf.allow
 
    # Restart csf to solidify the changes
-   - name: Restart CSF
-     action: command csf -r
+ - name: Restart CSF
+   action:
+      command csf -r
 
    # Start the lfd daemon
-   - name: Start LFD
-     action: command /etc/init.d/lfd start
+ - name: Start LFD
+   action:
+      command /etc/init.d/lfd start
