--- a/csf/tasks/main.yml
+++ b/csf/tasks/main.yml
@@ -15,7 +15,7 @@
  - name: Missing CSF modules!
    shell: 
       echo 'missing module(s)! Search for FATAL in testResult.txt.'
-   only_if:
+   when:
       shell: grep -e "*FATAL*" testResult.txt
 
    # Modify csf.conf according to the standards in our 'Palaso Servers' google doc
@@ -34,7 +34,7 @@
  - name: Appending some commonly used IP addresses to csf.allow
    shell:
       echo -e "82.94.216.250 # cbl.abuseat.org for mail blocking\n193.62.202.28 # Manually allowed - Wed Feb  8 18:48:43 2012\ntcp|out|d=80|d=66.135.58.0/24 # # Akismet antispam - Thu Feb  9 15:06:40 2012\ntcp|out|d=80|d=72.233.56.0/24 # # wordpress.org - Thu Feb  9 15:08:09 2012\ntcp|out|d=80|d=75.126.16.218 # # subdomain.uservoice.com Mar 13 2012\n85.13.195.235 # # configserver.com firewall update - Mon Feb 13 07:46:26 2012\n# 61.7.176.228 # csf SSH installation/upgrade IP address - Mon Feb 13 07:46:36 2012\ntcp|out|d=80|d=184.95.147.111 # # orlando server palaso\ntcp|out|d=80|d=174.36.207.186 # # geolite.maxmind.com 1\ntcp|out|d=80|d=50.97.220.226  # # geolite.maxmind.com 2\ntcp|out|d=80|d=75.101.167.237 # # ESV Bible audio widget" >> /etc/csf/csf.allow
-   only_if:
+   when:
       shell: $(grep "tcp|out|d=80|d=184.95.147.111" /etc/csf/csf.allow) == 0
 
    # Restart csf to solidify the changes
