csf: update pignore and add restart for lfd
- Added nullmailer to pignore
- Restart lfd on notify

--- a/csf_config/defaults/main.yml
+++ b/csf_config/defaults/main.yml
@@ -165,4 +165,5 @@ csf_config_pignore:
     - "exe:/usr/sbin/named"
     - "exe:/usr/sbin/ntpd"
     - "exe:/bin/dbus-daemon"
+    - "exe:/usr/bin/dbus-daemon"
     - "exe:/sbin/ntpd"
