--- a/csf_config/tasks/main.yml
+++ b/csf_config/tasks/main.yml
@@ -56,7 +56,7 @@
     - { regexp: '^LF_WEBMIN_EMAIL_ALERT =', line: 'LF_WEBMIN_EMAIL_ALERT = "0"' }
     # - { regexp: '^', line: '' }
   notify:
-    - restart csf
+    - restart lfd
   tags:
     - csf_conf
 
@@ -85,7 +85,7 @@
     - { name: 'PT_FORKBOMB', value: '"{{csf_config_process_forkbomb}}"' }
     - { name: 'PT_SSHDHUNG', value: '"{{csf_config_process_sshdhung}}"' }
   notify:
-    - restart csf
+    - restart lfd
   tags:
     - csf_process_tracking
 
@@ -97,7 +97,7 @@
   with_items:
     csf_config_lfd_blocks
   notify:
-    - restart csf
+    - restart lfd
   tags:
     - csf_lfd_checks
 
@@ -108,7 +108,7 @@
   with_items:
     csf_config_lfd_blocks
   notify:
-    - restart csf
+    - restart lfd
   tags:
     - csf_lfd_checks
 
@@ -120,7 +120,7 @@
   with_items:
     csf_config_logs
   notify:
-    - restart csf
+    - restart lfd
       
 # Configure the location of the custom logfiles
 - lineinfile: 
@@ -130,14 +130,14 @@
   with_items:
     csf_config_logs_custom
   notify:
-    - restart csf
+    - restart lfd
 
 # Template the csf.pignore
 - template:
     dest: /etc/csf/csf.pignore
     src: csf.pignore.j2
   notify:
-    - restart csf
+    - restart lfd
   tags:
     - csf_pignore
 
@@ -146,4 +146,4 @@
     dest: /usr/local/csf/bin/
     src: regex.custom.pm
   notify:
-    - restart csf
+    - restart lfd
