--- a/ssl_config/tasks/install.yml
+++ b/ssl_config/tasks/install.yml
@@ -4,6 +4,6 @@
   apt: name=openssl state=present
   # when: ansible_os_family == "Debian"
   
-- name: Ensure ssl store exist
-  file: path={{ssl_store}} state=directory owner="{{ssl_store_owner | default('root')}}" group="{{ssl_store_group | default('root')}}" mode=700
+- name: Ensure ssl path exist
+  file: path={{ssl_path}} state=directory owner="{{ssl_path_owner | default('root')}}" group="{{ssl_path_group | default('root')}}" mode=700
   
