authprogs: python style config

--- a/authprogs_config/tasks/main.yml
+++ b/authprogs_config/tasks/main.yml
@@ -1,5 +1,8 @@
-- name: Authprogs Configuration
-  copyv: src="site_files/{{inventory_hostname}}/root/.ssh/authprogs.conf"  dest="/root/.ssh/"
+#- name: Authprogs Configuration
+#  copyv: src="site_files/{{inventory_hostname}}/root/.ssh/authprogs.conf"  dest="/root/.ssh/"
   
+- name: Authprogs Configuration
+  copyv: src="site_files/{{inventory_hostname}}/root/.ssh/authprogs.yaml"  dest="/root/.ssh/"
+
 - name: Authprogs Keys
   copyv: src="site_files/{{inventory_hostname}}/root/.ssh/authorized_keys" dest="/root/.ssh/"
