--- a/locale_install/tasks/main.yml
+++ b/locale_install/tasks/main.yml
@@ -4,6 +4,8 @@
     line: "{{item}}"
   with_items:
     locale_install_locales
+  when: "'{{ansible_os_family}}' == 'debian'"
 
 - command: locale-gen
+  when: "'{{ansible_os_family}}' == 'debian'"
 
