authprogs: Add apt git dependency for installation

--- a/authprogs_install/tasks/main.yml
+++ b/authprogs_install/tasks/main.yml
@@ -1,4 +1,8 @@
 ---
+
+- name: Authprogs Install Pre-requisites
+  apt: package=git state=present
+
 - git:
     repo: "https://github.com/daethnir/authprogs.git"
     dest: "/usr/local/src/authprogs"
