--- a/ssh_config/tasks/main.yml
+++ b/ssh_config/tasks/main.yml
@@ -8,3 +8,14 @@
     - { regexp: '^\#?PasswordAuthentication ', line: 'PasswordAuthentication no' }
     - { regexp: '^\#?PermitRootLogin ', line: 'PermitRootLogin {{ sshd_permit_root_login }}' }
     - { regexp: '^\#?UseDNS ', line: 'UseDNS {{ sshd_use_dns }}' }
+  notify:
+    - restart ssh
+
+- lineinfile:
+    dest: /etc/default/ssh
+    regexp: "{{item.regexp}}"
+    line: "{{item.line}}"
+  with_items:
+    - { regexp: '^SSHD_OPTS=', line: 'SSHD_OPTS="-u0"' }
+  notify:
+    - restart ssh
