Fix bare variables in *with_* loops
Bare variables in *with_* loops will be deprecated in Ansible 2.2, so enclosing them in braces to remove the current Ansible 2.1 warnings.
- Also updated `sudo` calls to `become`

--- a/authprogs_config/tests/playbook.yml
+++ b/authprogs_config/tests/playbook.yml
@@ -2,7 +2,7 @@
 
 - name: Authprogs Test Install and Configuration
   hosts: all
-  sudo: true
+  become: true
   roles:
     - { role: ../../authprogs_install, tags: authprogs_install }
     - { role: ../../authprogs_config, tags: authprogs_config }
