--- a/ansible/tasks/main.yml
+++ b/ansible/tasks/main.yml
@@ -4,8 +4,8 @@
 - name: "Ansible: package dependencies"
   apt: name="{{item}}" state=present update_cache=yes cache_valid_time=86400
   with_items:
-    - python-pip
-    - python-dev
+    - "{{python-pip}}"
+    - "{{python-dev}}"
     
 - name: "Ansible: install via pip"    
   pip: name="ansible" state=present
@@ -13,8 +13,8 @@
 - name: "Ansible: remove build tools"
   apt: name="{{item}}" state=absent purge=yes
   with_items:
-    - python-dev
-    - build-essential
+    - "{{python-dev}}"
+    - "{{build-essential}}"
     
 - name: "Ansible: remove other build tools"
   command: apt-get -y autoremove
