--- a/monit_config/tests/info.yml
+++ b/monit_config/tests/info.yml
@@ -1,5 +1,5 @@
 - name: Monit Info
-  sudo: yes
+  become: yes
   fetch: src={{item}} dest={{info_dest|default('site_info/')}}
   with_items:
     - "/etc/monit/monitrc"
