--- a/postfix_config/tests/info.yml
+++ b/postfix_config/tests/info.yml
@@ -1,7 +1,7 @@
 - hosts: all
   name: Postfix Info
   gather_facts: no
-  sudo: yes
+  become: yes
   tasks:
     - name: Fetch config files
       sudo: yes
