--- a/ssl_config/tasks/sign.yml
+++ b/ssl_config/tasks/sign.yml
@@ -2,10 +2,10 @@
 
 - name: Self sign certificate
   command: openssl x509 -req -days {{item.days|default(3650)}} -in {{ssl_path}}/{{item.name}}.csr -signkey {{ssl_path}}/{{item.name}}.key -out {{ssl_path}}/{{item.name}}.pem {{item.sign.flags | default('-sha256')}}
-  with_items: ssl_items
+  with_items: "{{ssl_items}}"
   when: "'{{item.state}}' == 'selfsign'"
 
 - name: Download certificate
   fetch: src="{{ssl_path}}/{{item.name}}.pem" dest="{{ssl_certificate_local_path}}/{{item.name}}.pem" flat=true
-  with_items: ssl_items
+  with_items: "{{ssl_items}}"
   when: "'{{item.state}}' == 'selfsign'"
