--- a/csf_install/tasks/install.yml
+++ b/csf_install/tasks/install.yml
@@ -8,7 +8,7 @@
      state=latest     
 
 - name: Downloading Config Server Firewall
-  get_url: dest=/usr/local/src url=http://www.configserver.com/free/csf.tgz force=no
+  get_url: dest=/usr/local/src url=https://download.configserver.com/csf.tgz force=no
   
 - unarchive: copy=no src=/usr/local/src/csf.tgz dest=/usr/local/src/
 
