--- a/ssl_config/defaults/main.yml
+++ b/ssl_config/defaults/main.yml
@@ -35,4 +35,20 @@ ssl_items:
           - key: DNS.2
             value: "default.local"
     sign:
-      
+  - name: testletsencrypt
+    vendor: letsencrypt
+    state: request
+    request:
+        country_code: "NZ"
+        state: "Taranaki"
+        locality: "New Plymouth"
+        organization: "saygoweb"
+        organization_unit: ""
+        common_name: "test.saygoweb.com"
+        alt_names:
+          - key: DNS.1
+            value: "www.test.saygoweb.com"
+          - key: DNS.2
+            value: "test.saygoweb.com"
+    sign:
+        webroot: /var/www/virtual/saygoweb.com/test.saygoweb.com/htdocs
