ssl_config: letsencrypt
- Move letsencrypt request and sign into sign.yml
- Remove letsencrypt tag from request and install in main.yml
- Remove example request data because letsencrypt ignores it anyway.

--- a/ssl_config/defaults/main.yml
+++ b/ssl_config/defaults/main.yml
@@ -37,18 +37,9 @@ ssl_items:
     sign:
   - name: testletsencrypt
     vendor: letsencrypt
-    state: request
-    request:
-        country_code: "NZ"
-        state: "Taranaki"
-        locality: "New Plymouth"
-        organization: "saygoweb"
-        organization_unit: ""
-        common_name: "test.saygoweb.com"
-        alt_names:
-          - key: DNS.1
-            value: "www.test.saygoweb.com"
-          - key: DNS.2
-            value: "test.saygoweb.com"
+    state: sign
     sign:
-        webroot: /var/www/virtual/saygoweb.com/test.saygoweb.com/htdocs
+        webroot: /var/www/virtual/saygoweb.com/test/htdocs
+        alt_names:
+          - "-d test.saygoweb.com"
+          - "-d www.test.saygoweb.com"
