--- a/ssl_config/defaults/main.yml
+++ b/ssl_config/defaults/main.yml
@@ -3,6 +3,8 @@
 ssl_path: /root/csr
 ssl_certificate_local_path: site_files/certificates
 
+ssl_letsencrypt_defaultmode: webroot
+
 ssl_items:
   - name: test
     state: request
