--- a/ssl_config/tasks/sign.yml
+++ b/ssl_config/tasks/sign.yml
@@ -6,7 +6,7 @@
   when: "'{{item.state}}' == 'selfsign'"
 
 - name: Lets Encrypt sign certificate
-  command: /usr/local/bin/certbot-auto certonly -q --webroot -w {{ item.sign.webroot }} {{ item.sign.alt_names | join(' ') }}
+  command: /usr/local/bin/certbot-auto certonly --non-interactive --{{ item.sign.authmode | default(ssl_letsencrypt_defaultmode) }} -w {{ item.sign.webroot }} {{ item.sign.alt_names | join(' ') }}
   #args:
   #  creates: {{ssl_request_request_file}}
   with_items: "{{ssl_items}}"
