--- a/ssl_config/defaults/main.yml
+++ b/ssl_config/defaults/main.yml
@@ -4,6 +4,7 @@ ssl_path: /root/csr
 ssl_certificate_local_path: site_files/certificates
 
 ssl_letsencrypt_defaultmode: webroot
+ssl_letsencrypt_email: changeme@example.com
 
 ssl_items:
   - name: test
