letsencrypt: Make install optional and fix install error detection
- Introduced 'ssl_letsencrypt_install: true' which, if false, will
  not install certbot-auto
- When signing with LetsEncrypt made sure all vars have good defaults

--- a/ssl_config/defaults/main.yml
+++ b/ssl_config/defaults/main.yml
@@ -3,7 +3,8 @@
 ssl_path: /root/csr
 ssl_certificate_local_path: site_files/certificates
 
-ssl_letsencrypt_defaultmode: webroot
+ssl_letsencrypt_install: true
+ssl_letsencrypt_defaultmode: "webroot"
 ssl_letsencrypt_email: changeme@example.com
 
 ssl_items:
