--- a/ssl_config/tests/Vagrantfile
+++ b/ssl_config/tests/Vagrantfile
@@ -6,7 +6,7 @@ Vagrant.configure('2') do |config|
 
   config.vm.provision :ansible do |ansible|
     ansible.playbook = 'playbook.yml'
-    ansible.extra_vars = { ansible_ssh_user: 'vagrant', vagrant: true, tags: 'letsencrypt' }
+    ansible.extra_vars = { ansible_ssh_user: 'vagrant', vagrant: true }
 
     ansible.verbose = 'v'
   end
