replace "copyv" with "copy"
copyv is superceded by copy

--- a/authprogs_config/tasks/main.yml
+++ b/authprogs_config/tasks/main.yml
@@ -1,8 +1,7 @@
-#- name: Authprogs Configuration
-#  copyv: src="site_files/{{inventory_hostname}}/root/.ssh/authprogs.conf"  dest="/root/.ssh/"
-  
-- name: Authprogs Configuration
-  copyv: src="site_files/{{inventory_hostname}}/root/.ssh/authprogs.yaml"  dest="/root/.ssh/"
+---
 
-- name: Authprogs Keys
-  copyv: src="site_files/{{inventory_hostname}}/root/.ssh/authorized_keys" dest="/root/.ssh/"
+- name: "Authprogs Configuration"
+  copy: src="site_files/{{inventory_hostname}}/root/.ssh/authprogs.yaml"  dest="/root/.ssh/"
+
+- name: "Authprogs Keys"
+  copy: src="site_files/{{inventory_hostname}}/root/.ssh/authorized_keys" dest="/root/.ssh/"
