user_accounts: Update for new Ansible 2.x variable format

--- a/user_accounts/tasks/main.yml
+++ b/user_accounts/tasks/main.yml
@@ -5,5 +5,5 @@
  
 - authorized_key: user="{{ item.0.name }}" key="{{ item.1 }}"
   with_subelements:
-    - user_accounts
+    - "{{user_accounts}}"
     - authorized
