--- a/csf_config/defaults/main.yml
+++ b/csf_config/defaults/main.yml
@@ -27,6 +27,9 @@ csf_config_ports:
   udp4_out:
     - 53
 
+csf_config_allow: []
+#  - { ip: 10.1.2.3, comment: 'some comment'}
+
 csf_config_testing: 0
 # For VZ containers
 # csf_config_device: "venet0"
