csf: Update pignore
- csf.pignore list is now consistent with imscp 1.3.x

--- a/csf_config/defaults/main.yml
+++ b/csf_config/defaults/main.yml
@@ -160,17 +160,23 @@ csf_config_pignore:
     - "exe:/usr/bin/imapd"
     - "exe:/usr/lib/postfix/smtpd"
     - "exe:/usr/sbin/apache2"
-    - "exe:/usr/lib/apache2/mpm-prefork/apache2"
+    # - "exe:/usr/lib/apache2/mpm-prefork/apache2"
+    - "exe:/usr/lib/apache2/mpm-worker/apache2"
     - "user:postfix"
     - "user:postgrey"
     - "user:filter"
     - "user:cambell"
+    - "user:dovecot"
     - "exe:/usr/lib/courier-imap/bin/pop3d"
     - "exe:/usr/lib/courier-imap/bin/imapd"
     - "exe:/usr/sbin/sshd"
     - "exe:/usr/sbin/proftpd"
     - "exe:/usr/sbin/named"
-    - "exe:/usr/sbin/ntpd"
+    # - "exe:/usr/sbin/ntpd"
+    # - "exe:/sbin/ntpd"
     - "exe:/bin/dbus-daemon"
     - "exe:/usr/bin/dbus-daemon"
-    - "exe:/sbin/ntpd"
+    - "exe:/usr/local/sbin/imscp_panel"
+    - "exe:/usr/bin/php5-cgi"
+    - "exe:/usr/sbin/php5-fpm"
+    - "exe:/usr/sbin/atd"
