--- a/locale_install/tasks/main.yml
+++ b/locale_install/tasks/main.yml
@@ -1,5 +1,7 @@
+---
+
 - lineinfile: 
-    dest: /etc/locale.gen
+    path: /etc/locale.gen
     regexp: "{{item}}"
     line: "{{item}}"
   with_items:
